working on the navbar

--- a/angular-frontend/angular.json
+++ b/angular-frontend/angular.json
@@ -85,11 +85,9 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+  "src/assets",
+  "src/favicon.ico"
+],
             "styles": [
               "src/styles.scss"
             ],
