--- a/store/src/main/resources/application.properties
+++ b/store/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=store
 
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/supplement_store?useSSL=false&serverTimezone=UTC
-spring.datasource.username=ahmed
+spring.datasource.username=root
 spring.datasource.password=horhor2004
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
