--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@primeng/themes": "^18.0.0",
+    "primeicons": "^7.0.0",
     "primeng": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
