--- a/store/src/main/resources/application.properties
+++ b/store/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=store
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/supplement_store?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/suppstore?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=horhor2004
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
