--- a/angular-frontend/angular.json
+++ b/angular-frontend/angular.json
@@ -39,23 +39,19 @@
           "configurations": {
             "production": {
               "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kB",
-                  "maximumError": "4kB"
-                }
-              ],
-              "outputHashing": "all"
-            },
-            "development": {
-              "optimization": false,
-              "extractLicenses": false,
-              "sourceMap": true
+              {
+                "type": "initial",
+                "maximumWarning": "1MB",
+                "maximumError": "1.5MB"
+              },
+              {
+                "type": "anyComponentStyle",
+                "maximumWarning": "6kB", 
+                "maximumError": "7kB"     
+              }
+            ],
+              "outputHashing": "all",
+              "baseHref": "/fullstack-supplements-website/"
             }
           },
           "defaultConfiguration": "production"
@@ -93,6 +89,9 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
