Fix: set Java buildpack

--- a/store/src/main/resources/application.properties
+++ b/store/src/main/resources/application.properties
@@ -19,11 +19,13 @@ spring.datasource.hikari.connection-timeout=30000
 # Server configuration
 server.port=8080
 
-# Mailtrap SMTP configuration for Spring Boot
+# Email Configurations (use Mailtrap or other SMTP provider if needed)
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
 spring.mail.username=e89d5b565e22d9
 spring.mail.password=1567ea96ecafc6
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Dynamic From Email Address (can be different for production)
 spring.mail.from=orders@supplements-store.com
