--- a/store/src/main/resources/application.properties
+++ b/store/src/main/resources/application.properties
@@ -1,10 +1,16 @@
+# system.properties (in project root)
+java.runtime.version=17
 # Spring application name
 spring.application.name=store
 
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/suppstore?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+
+
+
+ # MySQL Database Configuration
+#spring.datasource.url=jdbc:mysql://nozomi.proxy.rlwy.net:13327/railway?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://nozomi.proxy.rlwy.net:13327/railway?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=horhor2004
+spring.datasource.password=LBBKmLekuoWVOZUhqJCTQJsujprkPdSW
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
@@ -17,15 +23,21 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=30000
 
 # Server configuration
-server.port=8080
+server.port=${PORT:8080}
 
-# Email Configurations (use Mailtrap or other SMTP provider if needed)
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
 spring.mail.username=e89d5b565e22d9
 spring.mail.password=1567ea96ecafc6
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=false
 
-# Dynamic From Email Address (can be different for production)
+
+
+# Sender address (must be verified in SendGrid)
 spring.mail.from=orders@supplements-store.com
+# Logging for debugging
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
