--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           context: ./store
           push: true
-          tags: ahmhi003/suppstore-backend:latest # Using a more descriptive name
+          tags: ahmhi003/suppstore-backend:latest # Using a more descriptive tag
 
       - name: Build and push frontend image
         uses: docker/build-push-action@v5
