--- a/store/Dockerfile
+++ b/store/Dockerfile
@@ -3,7 +3,7 @@ FROM openjdk:17-slim-bullseye
 WORKDIR /app
 
 # Use a wildcard (*) to copy any .jar file. This is more robust.
-COPY target/*.jar app.jar
+COPY target/store-0.0.1-SNAPSHOT.jar app.jar
 
 # Inform Docker that the application will listen on port 8080
 EXPOSE 8080
