--- a/store/Dockerfile
+++ b/store/Dockerfile
@@ -1,11 +1,34 @@
-# Use an official OpenJDK 17 runtime
-FROM openjdk:17-slim-bullseye
+# --- Stage 1: Build the application with Maven ---
+# Use a Maven image which includes the Java Development Kit (JDK)
+FROM maven:3.9-eclipse-temurin-17 AS build
+
+# Set the working directory
 WORKDIR /app
 
-# Use a wildcard (*) to copy any .jar file. This is more robust.
-COPY target/store-0.0.1-SNAPSHOT.jar app.jar
+# Copy the pom.xml file first to leverage Docker's dependency caching
+COPY pom.xml .
+
+# Copy the rest of your backend source code
+COPY src ./src
+
+# Run the Maven package command to build the .jar file.
+# This creates the /app/target/*.jar file inside this build stage.
+RUN mvn package -DskipTests
+
+
+# --- Stage 2: Create the final lightweight image ---
+# Use a slim Java Runtime Environment (JRE) for a small, secure final image
+FROM openjdk:17-slim-bullseye
+
+WORKDIR /app
+
+# Copy the .jar file that was built in the 'build' stage
+# This is the key step. We use a wildcard (*) so you don't have to change
+# the version number here every time.
+COPY --from=build /app/target/*.jar app.jar
 
 # Inform Docker that the application will listen on port 8080
 EXPOSE 8080
+
 # Set the command to run when the container starts
 ENTRYPOINT ["java", "-jar", "app.jar"]
