--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+# File: docker-compose.prod.yml
 version: '3.8'
 
 services:
@@ -6,32 +7,34 @@ services:
     container_name: suppstore-db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
+      # Use GitHub Secrets for production passwords
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: supplements_db
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - db-data:/var/lib/mysql
 
   backend:
-    build: ./store
+    image: ahmhi003/suppstore-backend:latest # Image from Docker Hub
     container_name: suppstore-backend
     restart: always
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://database:3306/supplements_db?createDatabaseIfNotExist=true
-      SPRING_DATASOURCE_USERNAME: user
-      SPRING_DATASOURCE_PASSWORD: password
+      SPRING_DATASOURCE_URL: jdbc:mysql://database:3306/supplements_db
+      SPRING_DATASOURCE_USERNAME: ${MYSQL_USER} # From .env file
+      SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD} # From .env file
     depends_on:
       - database
 
   frontend:
-    build: ./angular-frontend
+    image: ahmhi003/suppstore-frontend:latest # Image from Docker Hub
     container_name: suppstore-frontend
     restart: always
     ports:
-      - "4200:80"
+      # Expose on port 80, ready for Cloudflare Tunnel
+      - "80:80"
     depends_on:
       - backend
 
