--- a/store/src/main/resources/application.properties
+++ b/store/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.application.name=store
 
  # MySQL Database Configuration
 #spring.datasource.url=jdbc:mysql://nozomi.proxy.rlwy.net:13327/railway?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.url=jdbc:mysql://nozomi.proxy.rlwy.net:13327/railway?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=LBBKmLekuoWVOZUhqJCTQJsujprkPdSW
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
