--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# File: docker-compose.prod.yml
+# The new content for your PROD_COMPOSE_FILE secret
 version: '3.8'
 
 services:
@@ -7,7 +7,6 @@ services:
     container_name: suppstore-db
     restart: always
     environment:
-      # Use GitHub Secrets for production passwords
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: supplements_db
       MYSQL_USER: ${MYSQL_USER}
@@ -16,27 +15,36 @@ services:
       - db-data:/var/lib/mysql
 
   backend:
-    image: ahmhi003/suppstore-backend:latest # Image from Docker Hub
+    image: ahmhi003/suppstore-backend:latest
     container_name: suppstore-backend
     restart: always
-    ports:
-      - "8080:8080"
+    # NO PORTS HERE - Nginx will handle all traffic to the backend
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://database:3306/supplements_db
-      SPRING_DATASOURCE_USERNAME: ${MYSQL_USER} # From .env file
-      SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD} # From .env file
+      SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
+      SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
     depends_on:
       - database
 
   frontend:
-    image: ahmhi003/suppstore-frontend:latest # Image from Docker Hub
+    image: ahmhi003/suppstore-frontend:latest
     container_name: suppstore-frontend
     restart: always
+    # NO PORTS HERE - Nginx will handle all traffic to the frontend
+
+  # This is our new reverse proxy service
+  nginx-proxy:
+    image: nginx:alpine
+    container_name: suppstore-proxy
+    restart: always
     ports:
-      # Expose on port 80, ready for Cloudflare Tunnel
-      - "80:80"
+      - "80:80" # This is now the ONLY publicly exposed port for the app.
+    volumes:
+      # This mounts the nginx.conf from your repository into the Nginx container.
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - backend
+      - frontend
 
 volumes:
   db-data:
