--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# The new content for your PROD_COMPOSE_FILE secret
+# New content for your PROD_COMPOSE_FILE secret
 version: '3.8'
 
 services:
@@ -15,10 +15,9 @@ services:
       - db-data:/var/lib/mysql
 
   backend:
-    image: ahmhi003/suppstore-backend:latest
+    image: ahmhi003/suppstore-backend:${IMAGE_TAG:-latest} # Use the version tag
     container_name: suppstore-backend
     restart: always
-    # NO PORTS HERE - Nginx will handle all traffic to the backend
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://database:3306/supplements_db
       SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
@@ -27,20 +26,17 @@ services:
       - database
 
   frontend:
-    image: ahmhi003/suppstore-frontend:latest
+    image: ahmhi003/suppstore-frontend:${IMAGE_TAG:-latest} # Use the version tag
     container_name: suppstore-frontend
     restart: always
-    # NO PORTS HERE - Nginx will handle all traffic to the frontend
 
-  # This is our new reverse proxy service
   nginx-proxy:
     image: nginx:alpine
     container_name: suppstore-proxy
     restart: always
     ports:
-      - "80:80" # This is now the ONLY publicly exposed port for the app.
+      - "80:80"
     volumes:
-      # This mounts the nginx.conf from your repository into the Nginx container.
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - backend
