--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# New content for your PROD_COMPOSE_FILE secret
+# Simplified docker-compose.prod.yml
 version: '3.8'
 
 services:
@@ -9,38 +9,27 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: supplements_db
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_USER: ${SPRING_DATASOURCE_USERNAME} # DB needs this to create the user
+      MYSQL_PASSWORD: ${SPRING_DATASOURCE_PASSWORD} # DB needs this to set the password
     volumes:
       - db-data:/var/lib/mysql
 
   backend:
-    image: ahmhi003/suppstore-backend:${IMAGE_TAG:-latest} # Use the version tag
+    image: ahmhi003/suppstore-backend:${IMAGE_TAG:-latest}
     container_name: suppstore-backend
     restart: always
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://database:3306/supplements_db
-      SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
-      SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
+    # NO environment variables are needed here anymore!
+    # The configuration is now baked into the image.
     depends_on:
       - database
 
   frontend:
-    image: ahmhi003/suppstore-frontend:${IMAGE_TAG:-latest} # Use the version tag
-    container_name: suppstore-frontend
-    restart: always
+    image: ahmhi003/suppstore-frontend:${IMAGE_TAG:-latest}
+    # ... (rest of frontend config is fine)
 
   nginx-proxy:
     image: nginx:alpine
-    container_name: suppstore-proxy
-    restart: always
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - backend
-      - frontend
+    # ... (rest of nginx config is fine)
 
 volumes:
   db-data:
