--- a/angular-frontend/nginx.conf
+++ b/angular-frontend/nginx.conf
@@ -1,28 +1,19 @@
-# File: nginx.conf
-# This is the configuration for our reverse proxy
-
 server {
-    # Nginx will listen for all incoming traffic on port 80
     listen 80;
+    server_name localhost; # Can be your domain name if you have one
 
-    # This is the default route. Any request that doesn't match another location
-    # will be sent to the Angular frontend application.
+    # This location block proxies all requests that are not /api to the frontend container
     location / {
-        # 'frontend' is the name of our Angular service in docker-compose.
-        # Nginx will forward the request to the frontend container's port 80.
-        proxy_pass http://frontend:80; 
+        proxy_pass http://app-frontend-1:80; 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # This route handles all API calls. Any request whose path starts with /api
-    # will be sent to the Spring Boot backend application.
+    # This location block proxies requests starting with /api to the backend container
     location /api {
-        # 'backend' is the name of our Spring Boot service in docker-compose.
-        # Nginx will forward the request to the backend container's port 8080.
-        proxy_pass http://backend:8080; 
+        proxy_pass http://suppstore-backend:8080; 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
