--- a/angular-frontend/nginx.conf
+++ b/angular-frontend/nginx.conf
@@ -1,8 +1,7 @@
 server {
     listen 80;
-    server_name localhost; # Can be your domain name if you have one
+    server_name localhost;
 
-    # This location block proxies all requests that are not /api to the frontend container
     location / {
         proxy_pass http://app-frontend-1:80; 
         proxy_set_header Host $host;
@@ -11,7 +10,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # This location block proxies requests starting with /api to the backend container
     location /api {
         proxy_pass http://suppstore-backend:8080; 
         proxy_set_header Host $host;
