--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: suppstore-db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD} # This variable comes from the .env file written by the workflow
       MYSQL_DATABASE: supplements_db
       MYSQL_USER: ${SPRING_DATASOURCE_USERNAME}
       MYSQL_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
@@ -22,14 +22,14 @@ services:
 
   frontend:
     image: ahmhi003/suppstore-frontend:${IMAGE_TAG:-latest}
-    container_name: app-frontend-1 # Ensure this name matches the one used in nginx.conf
+    container_name: app-frontend-1
     restart: always
 
-  nginx-proxy: # <--- THIS SERVICE MUST BE PRESENT AND UNCOMMENTED
+  nginx-proxy:
     image: nginx:alpine
     container_name: app-nginx-proxy-1
     ports:
-      - "80:80" # Map host port 80 to container port 80
+      - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
