--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 # .github/workflows/main.yml
-# Final workflow with build-time configuration
+# Final workflow with build-time configuratiomn
 # This is a dummy change to force GitHub to re-read the workflow file - DELETE ME LATER
 name: Build, Push, and Deploy
 
