--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 # .github/workflows/main.yml
-# Final workflow with build-time configuratiomn
+# Final workflow with build-time configuration
 # This is a dummy change to force GitHub to re-read the workflow file - DELETE ME LATER
 name: Build, Push, and Deploy
 
@@ -82,10 +82,15 @@ jobs:
 
             echo "--- Creating or updating .env file ---"
             > .env
-            echo "MYSQL_ROOT_PASSWORD=${{ secrets.DB_ROOT_PASSWORD }}" >> .env # <--- Updated to use DB_ROOT_PASSWORD
-            echo "SPRING_DATASOURCE_USERNAME=${{ secrets.SPRING_DATASOURCE_USERNAME }}" >> .env
-            echo "SPRING_DATASOURCE_PASSWORD=${{ secrets.SPRING_DATASOURCE_PASSWORD }}" >> .env
-            echo "IMAGE_TAG=${{ needs.build-and-push.outputs.version }}" >> .env
+            # --- ULTIMATE RADICAL FIX FOR UNBOUND VARIABLE ---
+            # This uses shell parameter expansion (${VAR :- default})
+            # to ensure the variable always resolves to a string (even empty),
+            # preventing the "unbound variable" error.
+            echo "MYSQL_ROOT_PASSWORD=${{ secrets.DB_ROOT_PASSWORD :- }}" >> .env
+            echo "SPRING_DATASOURCE_USERNAME=${{ secrets.SPRING_DATASOURCE_USERNAME :- }}" >> .env
+            echo "SPRING_DATASOURCE_PASSWORD=${{ secrets.SPRING_DATASOURCE_PASSWORD :- }}" >> .env
+            echo "IMAGE_TAG=${{ needs.build-and-push.outputs.version :- }}" >> .env
+            # --- END ULTIMATE RADICAL FIX ---
             if [ ! -s .env ]; then
                 echo "ERROR: .env file was not created or is empty. Check related secrets."
                 exit 1
