--- a/angular-frontend/nginx.conf
+++ b/angular-frontend/nginx.conf
@@ -18,3 +18,4 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+# This is a simple Nginx configuration file for a fullstack application
